# MachineLearning

./: .gitignore  README.md
BTK/: NaturalProcessingLang.md  btk_001.ipynb  btk_002.ipynb  btk_003.ipynb  btk_004.ipynb  btk_005.ipynb  btk_006.ipynb  btk_007.ipynb  btk_008.ipynb  btk_009.ipynb  btk_010.ipynb  btk_011.ipynb  btk_012.ipynb  btk_013.ipynb
BTK/data/: Restaurant_Reviews.csv
BasicLinearRegression/: CMakeLists.txt  README.md
BasicLinearRegression/Inc/: csv.h  linearRegression.h
BasicLinearRegression/data/: data.csv
BasicLinearRegression/src/: csv.cpp  linearRegression.cpp  main.cpp
